# Remedy-LLM

./: RemedyLLMTrain.ipynb
Remedy/: .env.example  .gitignore  RemedyLLMTrain.ipynb  app.py  data.py  plan.md  prepare_dataset.py  pyproject.toml  remedy_slm.ipynb  requirements.txt  train.py
Remedy/data/: train.jsonl  val.jsonl
Remedy/static/: index.html
